--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,6 +19,7 @@
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp"
         android:text="Please Login"
+        android:fontFamily="@font/andika_new_basic_bold"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="34sp"
@@ -33,6 +34,7 @@
         android:drawablePadding="24dp"
         android:ems="10"
         android:hint="Username"
+        android:fontFamily="@font/andika_new_basic_bold"
         android:inputType="textPersonName" />
 
     <EditText
@@ -44,12 +46,14 @@
         android:drawablePadding="24dp"
         android:ems="10"
         android:hint="Password"
+        android:fontFamily="@font/andika_new_basic_bold"
         android:inputType="textPassword" />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/andika_new_basic_bold"
         android:text="Login" />
 
     <TextView
@@ -57,6 +61,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="Belum punya akun? Registrasi disini"
+        android:fontFamily="@font/andika_new_basic_bold"
         android:textAlignment="center" />
   </LinearLayout>
 
